Builds with JDK 17